# chain_anonimity

./: Cargo.toml  README.md  ranked_domains.json
chains/123rf.com/: 0
chains/20minutes.fr/: 0
chains/20minutos.es/: 0
chains/365scores.com/: 0
chains/aa.com/: 0
chains/aa.com.tr/: 0
chains/aaa.com/: 0
chains/aajtak.in/: 0  1
chains/aarp.org/: 0
chains/abc.es/: 0
chains/abc.net.au/: 0
chains/abebooks.com/: 0
chains/abplive.com/: 0
chains/abril.com.br/: 0
chains/academia.edu/: 0
chains/accuweather.com/: 0
chains/acehardware.com/: 0
chains/acs.org/: 0
chains/action.com/: 0
chains/actu.fr/: 0  1
chains/adobe.com/: 0
chains/agoda.com/: 0
chains/airbnb.com/: 0
chains/aiscore.com/: 0
chains/akakce.com/: 0
chains/alamy.com/: 0
chains/alberta.ca/: 0
chains/alibaba.com/: 0
chains/aliexpress.com/: 0  1
chains/aljazeera.com/: 0
chains/allegro.pl/: 0
chains/allevents.in/: 0
chains/allmusic.com/: 0
chains/allocine.fr/: 0
chains/allrecipes.com/: 0
chains/alltrails.com/: 0
chains/almaany.com/: 0
chains/amarujala.com/: 0
chains/amazon.ca/: 0
chains/amazon.co.jp/: 0
chains/amazon.com.br/: 0
chains/amazon.com.mx/: 0
chains/amazon.de/: 2
chains/amazon.es/: 0
chains/amazon.in/: 0
chains/amazon.it/: 0
chains/ameblo.jp/: 0
chains/americanas.com.br/: 0
chains/americanexpress.com/: 0
chains/aminoapps.com/: 0
chains/android.com/: 0
chains/angi.com/: 0
chains/answers.com/: 0
chains/antaranews.com/: 0
chains/aol.com/: 0
chains/apa.org/: 0
chains/apartments.com/: 0
src/: main.rs
(+840 files in other folders)
